# knowledge_base

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/prompts/: tour_c_cpp_agent.prompt.md
builds/install/: install.md
cmake/: get_boost.cmake
config/: ccpp_conf.md  git_conf.md
config/env_conf/: os_linux.md
config/vscode_conf/: ccpp_pulgs.md  clangd_pulgs.md  cmake_pulgs.md
docs/: AI算法.md  ai.md  bigdata.md  c.md  code_style_guilde.md  complier.md  complier1.md  cpp.md  go.md  java.md  mark.md  rust.md  嵌入式.md  数据库.md
docs/c/: C语言全栈学习路径：从零基础到资深开发（2025年最新版）.md  cppreference.md  todoC.md
docs/coding/: complier2.md  lexer.md
docs/coding_tao/: markdown_todo.md
docs/cpp/: C++语言全栈学习路径：从零基础到资深开发（2025年最新版）.md
docs/plan/: AI算法项目-C++开发算法工程化方向.md  程序人生每日计划.md  程序人生马拉松.md  程序员我的每日计划.md  程序设计语言-C语言超详细学习大纲.md  程序设计语言-Go语言学习大纲.md
docs/todo/: go.md  (+2 more)
examples/: LRU  LRU.c
program/: program.md
reference/tour_c_cpp/c/: CMakeLists.txt  c.md  tour_c.md
reference/tour_c_cpp/c/language/: language.md
reference/tour_c_cpp/c/language/basic_concepts/: arithmetic_type.md  as_if.md  ascii.md  basic_concepts.md  charset.md  comment.md  compatible_type.md  identifiers.md  lifetime.md  main_function.md  memory_model.md  name_space.md  object.md  punctuators.md  scope.md  translation_phases.md  ub.md
reference/tour_c_cpp/c/language/expressions/: expressions.md
reference/tour_c_cpp/c/language/functions/: functions.md
reference/tour_c_cpp/c/language/keyword/: keyword.md
reference/tour_c_cpp/c/language/preprocessor/: conditional.md  embed.md  impl.md  include.md  line.md  preprocessor.md  replace.md  warning.md
reference/tour_c_cpp/c/language/statements/: break.md  compounds.md  continue.md  do.md  expressions.md  for.md  goto.md  if.md  labels.md  return.md  statements.md  switch.md  while.md
reference/tour_c_cpp/c/language_standard/: language_standard.md
reference/tour_c_cpp/c/language_standard/compiler_support/: compiler_support.md
reference/tour_c_cpp/cpp/: CMakeLists.txt  cpp.md  main.md  progcc.cpp  progcpp.cpp  tour_cpp.cpp  tour_cpp.md
reference/tour_c_cpp/cpp/language/: language.md
reference/tour_c_cpp/cpp/language/basic_concepts/: as_if.md  ascii.md  basic_concepts.md  basic_types.md  charset.md  comments.md  contracts.md  definition.md  identifiers.md  lifetime.md  lookup.md  main_function.md  memory_model.md  modules.md  multithread.md  objects.md  punctuators.md  qualified_lookup.md  scope.md  storage_duration.md  translation_phases.md  types.md  ub.md  unqualified_lookup.md
reference/tour_c_cpp/cpp/language/exceptions/: exceptions.md
reference/tour_c_cpp/cpp/language/expressions/: expressions.md
reference/tour_c_cpp/cpp/language/keywords/: keywords.md
reference/tour_c_cpp/cpp/language/preprocessor/: conditional.md  embed.md  impl.md  include.md  line.md  preprocessor.md  replace.md  warning.md
reference/tour_c_cpp/cpp/language/statements/: break.md  compounds.md  continue.md  contract_assert.md  declarations.md  do.md  expressions.md  for.md  goto.md  if.md  labels.md  range_for.md  return.md  statements.md  switch.md  transactional_memory.md  try.md  while.md
reference/tour_c_cpp/cpp/language_standard/: cpp17.md  cpp26.md  current_status.md  language_standard.md
reference/tour_c_cpp/cpp/language_standard/compiler_support/: compiler_support.md
reference/tour_c_cpp/cpp/toolchain/standard/: c-standard.md
rust/: Cargo.toml  README.md
scripts/: scripts.md
src/c/: CMakeLists.txt  math.s  progc.c
src/c/basics/: basics.c
src/c/basics/expressions/: evaluationOrder.c  expressions.c  implicitConversions.c  valueCategory.c
src/c/basics/variable/: declarations.c  initialization.c  keywords.c  staticassertion.c  variable.md
src/c/basics/variable/qualifiers/: atomic.c  const.c  restrict.c
src/c/basics/variable/specifiers/: inline.c  noreturn.c  static.c  threadlocal.c  typedef.c  typeof.c
src/c/basics/variable/specifiers/types/: bitfields.c  boolean.c  character.c  enumerated.c  floating.c
src/c/expressions/: constantExpressions.c  evaluationOrder.c  genericSelection.c  implicitConversions.c  valueCategory.c
src/c/pointers/: pointers.c
src/c/variable/: arrays.c  atomics.c  boolean.c  character.c  declarations.c  enumerated.c  floating.c  functions.c  initialization.c  integer.c  keywords.c  pointers.c  staticassertion.c  string.c  structure.c  unions.c  variable.c  variable.md  varlimits.c  voidtypes.c
src/c/variable/qualifiers/: const.c  restrict.c  volatile.c
src/c/variable/specifiers/: alignas.c  attribute.c  auto.c  constexpr.c  extern.c  inline.c  noreturn.c  register.c  static.c  threadlocal.c  typedef.c  typeof.c
src/c/variable/specifiers/types/: bitfields.c
src/c/variable/types/: arrays.c  atomics.c  character.c  integer.c  unions.c
src/c/variable/types_specifiers/: atomics.c  functions.c  string.c  structure.c
src/cpp/: CMakeLists.txt  progcc.cpp
src/tour_ccpp/: CMakeLists.txt  progcc.cpp
src/tour_ccpp/c/basics/expressions/: expressions.md
src/tour_ccpp/c/basics/variable/specifiers/types/: arrays.c
src/tour_ccpp/cpp/: CMakeLists.txt
src/tour_ccpp/cpp/doc/io/: input.md
src/tour_ccpp/doc/toolchain/standard/: 如何写出规范层次清晰的 Markdown 文档.md
tests/examples/knowledge_base/: CMakeLists.txt
tests/examples/knowledge_base/menu_manager/: ExampleMenuManager.cpp  menu.cpp
tests/examples/thridparty/: CMakeLists.txt  ExampleThrid.cpp  boost.md  thridparty.cpp
tests/examples/thridparty/cmdline_parser/cli11/: cli11.md  exple_cli11.cpp  exple_cli11.h
tests/examples/thridparty/cmdline_parser/gflags/: exple_gflags.cpp  exple_gflags.h  gflags.md
tests/examples/thridparty/general_purpose/boost/: boost.md  exple_po.cpp  exple_po.h
tests/examples/thridparty/log_format/fmt/: exple_fmt.cpp  exple_fmt.h  fmt.md
tests/examples/thridparty/log_format/logc/: exple_logc.cpp  exple_logc.h  logc.md
tests/examples/thridparty/log_format/spdlog/: exple_spdlog.cpp  exple_spdlog.h  spdlog.md
thridparty/: thridparty.md
(+3640 files in other folders)
